# KAIST_MFE

./: .gitignore  README.md  pyproject.toml
BAF504투자분석/: Lec1_FanancialStatement.xlsx  Lec8_Optimal_risky_portolio.xlsx
BAF510채권/: BOND_FINAL_PREP.xlsx  T1.xlsx  T2 - Copy.xlsx  T2.xlsx  T3.xlsx  T4.xlsx
BAF515금공프3/: 01.python_basics.ipynb  02.containers.ipynb  03.control_flows.ipynb  04.function.ipynb  04.실습-blackscholes.ipynb  0430.ipynb  05.numpy.ipynb  PER_ROA.csv
BAF627포폴최적화/: port_corr.ipynb
BAF633시뮬레이션/: GPT로공부.ipynb  GPT로공부.py  직접구현.ipynb  직접구현.py
BAF641수치해석/: derivatives_error.ipynb  derivatives_error.py  error_예제.ipynb  error_예제.py  exfdm_worst_of.ipynb  exfdm_worst_of.py  lec1.ipynb  lec1.py  lu.ipynb  lu.py
BAF642시계열/: study.ipynb  study.py
BAF645파생거래전략/: gpt_option_study.ipynb  gpt_option_study.py
BAF653알고리즘/: LiquidationPermanentPriceImpactForStudent-보배.ipynb  LiquidationPermanentPriceImpactForStudent-보배.py  LiquidationPermanentPriceImpactForStudent.ipynb  LiquidationPermanentPriceImpactForStudent.py  OrderFlowForStudent-보배.ipynb  OrderFlowForStudent-보배.py  OrderFlowForStudent.ipynb  OrderFlowForStudent.py
BAF660_빅데/: Ch1_(1).ipynb  Ch1_(1).py  Ch1_(2).ipynb  Ch1_(2).py  Ch2.ipynb  Ch2.py  Ch3.md  Ch3_notebook.ipynb  Ch3_notebook.py
BAF673알고리즘황근호/: 0_sp500_example.ipynb  0_sp500_example.py  1_sp500_ssd_pair_example.ipynb  1_sp500_ssd_pair_example.py  ar1_estimation.ipynb  ar1_estimation.py  ar1_identification.ipynb  ar1_process.ipynb  bertram0_functions.ipynb  bertram0_functions.py  bertram1_trade_length.ipynb  bertram1_trade_length.py  (+22 more)
(+550 files in other folders)
