[tool.poetry]
name = "kaist-mfe-quantpy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.5"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
statsmodels = "^0.14.1"
tqdm = "^4.66.2"
seaborn = "^0.13.2"
quantstats = "^0.0.62"
yfinance = "^0.2.37"
pandas-datareader = "^0.10.0"
pykrx = "^1.0.45"
quantlib = "^1.33"
financepy = "^0.350"
pyassetpricing = "^1.1"
sympy = "^1.12"
opstrat = "^0.1.7"
option-price = "^0.2.0"
factor-analyzer = "^0.5.1"
arch = "^6.3.0"
numpy-financial = "^1.0.0"
plotly = "^5.24.1"
numexpr = "^2.10.1"
line-profiler = "^4.1.3"
pykalman = "^0.9.7"
pmdarima = "^2.0.4"
tables = "^3.10.1"
h5py = "^3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
